tests/expected_invalid_call_contracts.diag.out
<input>:17:5: error: unknown function 'missing_call'
        missing_call()
        ^^^^^^^^^^^^^^
<input>:21:5: error: function 'takes_one' expects 1 argument(s), got 0
        takes_one()
        ^^^^^^^^^^^
<input>:25:5: error: function 'takes_one' expects 1 argument(s), got 2
        takes_one(1, 2)
        ^^^^^^^^^^^^^^^
<input>:29:15: error: argument 1 to 'takes_one' has type 'Text', expected 'Int'
        takes_one("seven")
                  ^^^^^^^
<input>:33:15: error: failing expression must be handled with `try` or `match`
        takes_one(load())
                  ^^^^^^
<input>:37:5: error: callee must be a named function
        takes_one.value()
        ^^^^^^^^^^^^^^^^^
